--- a/document/Thesis.tex
+++ b/document/Thesis.tex
@@ -54,12 +54,12 @@
 
 \lstset{style=mystyle}
 
-\title{Propuesta de sistema para la generación de reportes de enfrentamientos deportivos independiente de la fuente de datos}
+\title{Generación automática de reportes textuales sobre enfrentamientos deportivos}
 \author{\\\vspace{0.25cm}Abel Molina Sánchez}
 \advisor{\\\vspace{0.25cm}Dr. Yudivián Almeida Cruz\\\vspace{0.2cm}Lic. Manuel Santiago Fernández Arias}
 \degree{Licenciado en Ciencia de la Computación}
 \faculty{Facultad de Matemática y Computación}
-\date{Fecha\\\vspace{0.25cm}\href{https://github.com/abel1927/Thesis}{github.com/abel1927/Thesis}}
+\date{Noviembre 2022\\\vspace{0.25cm}\href{https://github.com/abel1927/Thesis}{github.com/abel1927/Thesis}}
 \logo{Graphics/uhlogo}
 \makenomenclature
 
