--- a/document/MainMatter/Introduction.tex
+++ b/document/MainMatter/Introduction.tex
@@ -26,7 +26,7 @@ productos a partir de sus fichas técnicas. El periodismo ha sido otra de las es
 periodismo robótico) está cada vez más extendida, al punto de que importantes editoriales como \textit{The Washington Post} han creado sus propios sistemas para la generación de 
 texto a partir de datos\footnote[2]{https://www.washingtonpost.com/pr/wp/2017/09/01/the-washington-post-leverages-heliograf-to-cover-high-school-football/}. 
 En este caso, su sistema se apoda \textit{Heliograf} y les permite cubrir todos los partidos de fútbol americano de las escuelas secundarias del área de Washington DC 
-cada semana.
+cada semana.\\
 
        \textbf{Problema}\\
 
@@ -64,9 +64,9 @@ en el trabajo de tesis de Roberto Balboa González \brackcite{balboa2020}. Este 
 desde el punto de vista de esta disciplina. %El resto de los antecedentes vienen enmarcados en el estudio de la literatura y de los sistemas existentes dentro del campo de la GLN que 
 %se presentan en un capítulo posterior.%
 
-A pesar de los avances indiscutibles en el campo de la GLN queda aún mucho por hacer. Se considera que es interesante ampliar los sistemas que den cobertura informativa a los eventos 
-deportivos en idioma español. Además, es motivante crear un diseño de sistema para la generación de resúmenes textuales de enfrentamientos deportivos, que pueda servir dentro del 
-grupo de IA de MATCOM como antesala de futuras investigaciones y aplicaciones.
+%A pesar de los avances indiscutibles en el campo de la GLN queda aún mucho por hacer. Se considera que es interesante ampliar los sistemas que den cobertura informativa a los eventos 
+%deportivos en idioma español. Además, es motivante crear un diseño de sistema para la generación de resúmenes textuales de enfrentamientos deportivos, que pueda servir dentro del 
+%grupo de IA de MATCOM como antesala de futuras investigaciones y aplicaciones.
 
 
 Teniendo en cuenta estos antecedentes, y partiendo de la hipótesis de que es posible definir un esquema general para representar los datos que describen los enfrentamientos deportivos,
@@ -82,7 +82,8 @@ se arriba al objetivo del presente trabajo.\\
     \textbf{Objetivo}\\
 
     Proponer el diseño de un sistema para la generación de res\'umenes o reportes de eventos deportivos 
-independiente de la fuente de datos del dominio, utilizando como muestras para la validación el fútbol y el boxeo.
+independiente de la fuente de datos del dominio.
+% utilizando como muestras para la validación el fútbol y el boxeo.
 %A partir de dicho diseño se presentan dos modelos capaces de generar resúmenes de partidos de 
 %fútbol y combates de boxeo. 
 
